--- a/cssejercicios/index.html
+++ b/cssejercicios/index.html
@@ -16,12 +16,12 @@
             <li><span>3</span><a href="./cssParte1/css03StyleEnFile/index.html">Style en File</a></li>
             <li><span>4</span><a href="./cssParte1/css08CentradoYPadding/index.html">Centrado y Padding</a></li>
             <li><span>5</span><a href="./cssParte1/css09BackgroundFijo/index.html">Background Fijo (Opcional)</a></li>
-            <li><span>6</span><a href="">Divs en Pila</a></li>
-            <li><span>7</span><a href="">Divs en Fila</a></li>
-            <li><span>8</span><a href="">Divs Internos en Columnas</a></li>
-            <li><span>9</span><a href="">Selectores de Eventos</a></li>
-            <li><span>10</span><a href="">Divs Internos Relativos</a></li>
-            <li><span>11</span><a href="">Divs Internos Absolutos</a></li>
+            <li><span>6</span><a href="./ccsParte2/css10divsEnPila/index.html">Divs en Pila</a></li>
+            <li><span>7</span><a href="./ccsParte2/css11divsEnFila/index.html">Divs en Fila</a></li>
+            <li><span>8</span><a href="./ccsParte2/css14DivsInternosEnColumnas/index.html">Divs Internos en Columnas</a></li>
+            <li><span>9</span><a href="./ccsParte2/css16SelectoresDeEvento/index.html">Selectores de Eventos</a></li>
+            <li><span>10</span><a href="./ccsParte2/css20DivsInternosRelativos/index.html">Divs Internos Relativos</a></li>
+            <li><span>11</span><a href="./ccsParte2/css21DivsInternosAbsolutos/index.html">Divs Internos Absolutos</a></li>
             <li><span>12</span><a href="">Centrado Vertical</a></li>
             <li><span>13</span><a href="">Forms RWD</a></li>
             <li><span>14</span><a href="">Tablas RWD</a></li>
