--- a/cssejercicios/index.html
+++ b/cssejercicios/index.html
@@ -22,11 +22,12 @@
             <li><span>9</span><a href="./ccsParte2/css16SelectoresDeEvento/index.html">Selectores de Eventos</a></li>
             <li><span>10</span><a href="./ccsParte2/css20DivsInternosRelativos/index.html">Divs Internos Relativos</a></li>
             <li><span>11</span><a href="./ccsParte2/css21DivsInternosAbsolutos/index.html">Divs Internos Absolutos</a></li>
-            <li><span>12</span><a href="">Centrado Vertical</a></li>
-            <li><span>13</span><a href="">Forms RWD</a></li>
-            <li><span>14</span><a href="">Tablas RWD</a></li>
-            <li><span>15</span><a href="">Layout Basico</a></li>
-            <li><span>16</span><a href="">Layout Responsivo</a></li>
+            <li><span>12</span><a href="./cssParte3/css22CentradoVerticalCajaFlex/index.html">Centrado Vertical</a></li>
+            <li><span>13</span><a href="./cssParte3/css25Menu/index.html">Menu</a></li>
+            <li><span>14</span><a href="./cssParte3/css27formsRWD/index.html">Forms RWD</a></li>
+            <li><span>15</span><a href="./cssParte3/css29tablasRWD/index.html">Tablas RWD</a></li>
+            <li><span>16</span><a href="./cssParte3/css30layoutBasico/index.html">Layout Basico</a></li>
+            <li><span>17</span><a href="./cssParte3/css36layoutResponsivo/index.html">Layout Responsivo</a></li>
         </ul>
     </div>
 </body>
