--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
             <li><span>-</span><a href="TUPLABOlll_GlendaLeikin_TP1.pdf" download="GlendaLeikin_TP1">HTTP</a></li>
             <li><span>1</span><a href="./html/index.html">HTML</a></li>
             <li><span>2</span><a href="./cssejercicios/index.html">CSS</a></li>
-            <li><span>3</span>JScript</li>
+            <li><span>3</span><a href="./js/index.html"></a> JScript</li>
             <li><span>4</span>Especiales</li>
             <li><span>5</span>PHP</li>
         </ul>
