--- a/js/js03VariablesSimples/index.html
+++ b/js/js03VariablesSimples/index.html
@@ -28,6 +28,6 @@
         document.write("<h2>La variable <span style='color:blue'>d</span> cargada desde teclado: "+d+"</h2>");
         document.write("<h2>tipo de <span style='color:blue'>d</span>: "+typeof d+" </h2>"); 
     </script>
-    <a href="../../../PaginaPrincipal/js/index.html" class="volver">Volver</a>
+    <a href="../../js/index.html" class="volver">Volver</a>
 </body>
 </html>
