--- a/js/js04Arreglos/index.html
+++ b/js/js04Arreglos/index.html
@@ -20,6 +20,6 @@
         document.write("<h4>Segundo elemento cargado desde programa: "+ provincias[1] +"</h4>");
         document.write("<h4>Tercer elemento cargado desde teclado: "+ provincias[2] +"</h4>");
     </script>
-    <a href="../../../PaginaPrincipal/js/index.html" class="volver">Volver</a>
+    <a href="../index.html" class="volver">Volver</a>
 </body>
 </html>
