--- a/js/js01Sentencias/index.html
+++ b/js/js01Sentencias/index.html
@@ -19,6 +19,6 @@
         document.write("<h1>Texto4. Escrito desde java script.</h1>");
         document.write("<h1>No pisa el documento porque aún no termino el flujo de escritura del navegador</h1>");
     </script>
-    <a href="../../../js/index.html" class="volver">Volver</a> 
+    <a href="../index.html" class="volver">Volver</a> 
 </body>
 </html>
