--- a/js/js02ComandoEnEventos/index.html
+++ b/js/js02ComandoEnEventos/index.html
@@ -11,6 +11,6 @@
     <h1>Ejercicio JS02_comando_en_evento.html</h1>
     <button onClick="alert('Comando ejecutado en evento onClick de este botón. El código lo escribimos como valor del atributo onClick del objeto button')">Click Aquí para ejecutar un Alert</button>
     <button onclick="document.write('<h2>hola. Esta escritura pisa lo anterior</h2')">Click Aquí para ejecutar un document.write(); </button>
-    <a href="https://www.youtube.com/" class="volver">Volver</a>
+    <a href="../index.html" class="volver">Volver</a>
 </body>
 </html>
