--- a/js/js05Alcance/index.html
+++ b/js/js05Alcance/index.html
@@ -47,6 +47,6 @@
             }
         }
     </script> 
-    <a href="../../../PaginaPrincipal/js/index.html" class="volver">Volver</a>
+    <a href="../index.html" class="volver">Volver</a>
 </body>
 </html>
