--- a/js/js06OperacionesSobreInput/index.html
+++ b/js/js06OperacionesSobreInput/index.html
@@ -37,6 +37,6 @@
         document.getElementById("num").value = 2 ** parseInt(document.getElementById("num").value);
         }
     </script>
-<a href="../../../PaginaPrincipal/js/index.html" class="volver">Volver</a>
+<a href="../index.html" class="volver">Volver</a>
 </body>
 </html>
