--- a/js/js07FuncionesCompartidas/index.html
+++ b/js/js07FuncionesCompartidas/index.html
@@ -123,6 +123,6 @@
     document.getElementById("display").onclick = function(){
         document.getElementById("num").value = undefined;}
     </script>
-    <a href="../../../PaginaPrincipal/js/index.html" class="volver">Volver</a>
+    <a href="../index.html" class="volver">Volver</a>
 </body>
 </html>
