--- a/js/js08OperacionesEntreInputs/index.html
+++ b/js/js08OperacionesEntreInputs/index.html
@@ -60,6 +60,6 @@
         document.getElementById("resultado").value = mayor;
 	}
     </script>
-    <a href="../../../PaginaPrincipal/js/index.html" class="volver">Volver</a>
+    <a href="../index.html" class="volver">Volver</a>
 </body>
 </html>
