--- a/js/js10ConvertirAMayusculas/index.html
+++ b/js/js10ConvertirAMayusculas/index.html
@@ -32,6 +32,6 @@
         this.value = this.value.toUpperCase();
         }
     </script>
-    <a href="../../../PaginaPrincipal/js/index.html" class="volver">Volver</a>  
+    <a href="../index.html" class="volver">Volver</a>  
 </body>
 </html>
