--- a/js/index.html
+++ b/js/index.html
@@ -20,6 +20,13 @@
             <li><span>7</span><a href="./js07FuncionesCompartidas/index.html">Funciones Compartidas</a></li>
             <li><span>8</span><a href="./js08OperacionesEntreInputs/index.html">Operaciones Entre Inputs</a></li>
             <li><span>9</span><a href="./js10ConvertirAMayusculas/index.html">Convertir a Mayúsculas</a></li>
+            <li><span>10</span><a href="./js12VariableObjetoDatos/index.html">Variable Objeto Datos</a></li>
+            <li><span>11</span><a href="./js21FormConfirmacion/index.html">Form Confirmacion</a></li>
+            <li><span>12</span><a href="./js24ValidacionConKeyUp/index.html">Validacion Con KeyUp</a></li>
+            <li><span>13</span><a href="./js28FormABM/index.html">Form ABM</a></li>
+            <li><span>14</span><a href="./js29Location/index.html">Location</a></li>
+            <li><span>15</span><a href="./js30ConmutacionClase/index.html">Conmutacion Clase</a></li>
+            <li><span>16</span><a href="./js31CreacionObjetos/index.html">Creación Objetos</a></li>
         </ul>
     </div>
 </body>
