--- a/js/js28FormABM/index.html
+++ b/js/js28FormABM/index.html
@@ -203,7 +203,7 @@
             var dato1=document.getElementById("nombre").checkValidity();
             var dato2=document.getElementById("apellido").checkValidity();
             var dato3=document.getElementById("saldo").checkValidity();
-            if(dato1,dato2,dato3){
+            if(dato1&&dato2&&dato3){
                 document.getElementById("alta").disabled=false;
                 document.getElementById("baja").disabled=false;
                 document.getElementById("modificar").disabled=false;
