--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
             <li><span>1</span><a href="./html/index.html">HTML</a></li>
             <li><span>2</span><a href="./cssejercicios/index.html">CSS</a></li>
             <li><span>3</span><a href="./js/index.html">JScript</a></li>
-            <li><span>4</span>Especiales</li>
+            <li><span>4</span><a href="./especiales/index.html">Especiales</a></li>
             <li><span>5</span>PHP</li>
         </ul>
     </div>
