--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
             <li><span>2</span><a href="./cssejercicios/index.html">CSS</a></li>
             <li><span>3</span><a href="./js/index.html">JScript</a></li>
             <li><span>4</span><a href="./especiales/index.html">Especiales</a></li>
-            <li><span>5</span>PHP</li>
+            <li><span>5</span><a href="http://labo3.rf.gd/">PHP</a></li>
         </ul>
     </div>
 </body>
